bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(offer) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@3) as offer, ENC_PT(first_value(price) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@4) as price]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price)))))@0 ASC, offer@1 ASC, price@2 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price)))))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))), offer@1 as offer, price@2 as price], aggr=[first_value(offer) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price@1))))) as __common_expr_1, offer@0 as offer, price@1 as price]
        SortExec: expr=[ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price@1))))) ASC], preserve_partitioning=[false]
          CoalesceBatchesExec: target_batch_size=8192
            FilterExec: EBV(BOOLEAN_AS_TERM(EBV(LEQ(ENC_TV(deliveryDays@1), 9:3)) AND EBV(GT(ENC_TV(date@3), 10:{value:6334951680000.0000000000000000,offset:})))), projection=[offer@0, price@2]
              CoalesceBatchesExec: target_batch_size=8192
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, deliveryDays@1, price@2, date@4]
                  CoalesceBatchesExec: target_batch_size=8192
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, deliveryDays@1, price@3]
                      CoalesceBatchesExec: target_batch_size=8192
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, deliveryDays@2]
                          CoalesceBatchesExec: target_batch_size=8192
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@1, vendor@0)], projection=[offer@0]
                              CoalesceBatchesExec: target_batch_size=8192
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0), (vendor@1, vendor@1)], projection=[offer@0, vendor@1]
                                  CoalesceBatchesExec: target_batch_size=8192
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@2]
                                      DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>
                                      DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor>, object=?vendor, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                                  DataSourceExec: [GPOS] subject=?offer, predicate=<http://purl.org/dc/elements/1.1/publisher>, object=?vendor, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                              DataSourceExec: [GPOS] subject=?vendor, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>, object=<http://downlode.org/rdf/iso-3166/countries#US>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                          DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays>, object=?deliveryDays, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                      DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>, object=?price, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                  DataSourceExec: [GPOS] subject=?offer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo>, object=?date, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
