bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Optimized).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(offer) AS offer, ENC_PT(price) AS price
  Limit: skip=0, fetch=10
    Projection: first_value(offer) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST] AS offer, first_value(price) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST] AS price
      Sort: ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST
        Aggregate: groupBy=[[ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))), offer, price]], aggr=[[first_value(offer) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]]]
          Projection: offer, price
            Sort: ENC_SORT(xsd:double(ENC_TV(STR(ENC_PT(price))))) ASC NULLS FIRST
              Filter: EBV(BOOLEAN_AS_TERM(EBV(LEQ(ENC_TV(deliveryDays), ENC_TV(Struct({term_type:2,value:3,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))) AND EBV(GT(ENC_TV(date), ENC_TV(Struct({term_type:2,value:2008-06-20T00:00:00,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:}))))))
                Projection: lhs.offer AS offer, lhs.vendor AS vendor, lhs.deliveryDays AS deliveryDays, lhs.price AS price, rhs.date AS date
                  Inner Join: lhs.offer = rhs.offer
                    SubqueryAlias: lhs
                      Projection: lhs.offer AS offer, lhs.vendor AS vendor, lhs.deliveryDays AS deliveryDays, rhs.price AS price
                        Inner Join: lhs.offer = rhs.offer
                          SubqueryAlias: lhs
                            Projection: lhs.offer AS offer, lhs.vendor AS vendor, rhs.deliveryDays AS deliveryDays
                              Inner Join: lhs.offer = rhs.offer
                                SubqueryAlias: lhs
                                  Projection: lhs.offer AS offer, lhs.vendor AS vendor
                                    Inner Join: lhs.vendor = rhs.vendor
                                      SubqueryAlias: lhs
                                        Projection: lhs.offer AS offer, lhs.vendor AS vendor
                                          Inner Join: lhs.offer = rhs.offer, lhs.vendor = rhs.vendor
                                            SubqueryAlias: lhs
                                              Projection: lhs.offer AS offer, rhs.vendor AS vendor
                                                Inner Join: lhs.offer = rhs.offer
                                                  SubqueryAlias: lhs
                                                    QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>)
                                                  SubqueryAlias: rhs
                                                    QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor)
                                            SubqueryAlias: rhs
                                              QuadPattern (?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor)
                                      SubqueryAlias: rhs
                                        QuadPattern (?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>)
                                SubqueryAlias: rhs
                                  QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays)
                          SubqueryAlias: rhs
                            QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price)
                    SubqueryAlias: rhs
                      QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date)
