bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(product@0) as product, ENC_PT(label@1) as label]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(ENC_PT(label@1)) ASC], preserve_partitioning=[false]
    CoalesceBatchesExec: target_batch_size=8192
      FilterExec: EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(GT(ENC_TV(p1@2), 9:156)) AND EBV(LT(ENC_TV(p3@3), 9:152)))) AND EBV(BOOLEAN_AS_TERM(NOT EBV(BOUND(testVar@4)))))), projection=[product@0, label@1]
        CoalesceBatchesExec: target_batch_size=8192
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(product@0, product@0)], projection=[product@0, label@1, p1@2, p3@3, testVar@5]
            CoalesceBatchesExec: target_batch_size=8192
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, p1@2, p3@4]
                CoalesceBatchesExec: target_batch_size=8192
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, p1@3]
                    CoalesceBatchesExec: target_batch_size=8192
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                        CoalesceBatchesExec: target_batch_size=8192
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                            DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?label
                            DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                        DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                    DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?p1, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
                DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3>, object=?p3, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
            CoalesceBatchesExec: target_batch_size=8192
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, testVar@2]
                DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>
                DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?testVar, additional_filters=[DynamicFilterPhysicalExpr [ true ]]
