bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Optimized).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(product) AS product, ENC_PT(label) AS label
  Limit: skip=0, fetch=10
    Projection: product, label
      Sort: ENC_SORT(ENC_PT(label)) ASC NULLS FIRST
        Filter: EBV(BOOLEAN_AS_TERM(EBV(BOOLEAN_AS_TERM(EBV(GT(ENC_TV(p1), ENC_TV(Struct({term_type:2,value:156,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))) AND EBV(LT(ENC_TV(p3), ENC_TV(Struct({term_type:2,value:152,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})))))) AND EBV(BOOLEAN_AS_TERM(NOT EBV(BOUND(testVar))))))
          Projection: lhs.product AS product, lhs.label AS label, lhs.p1 AS p1, lhs.p3 AS p3, rhs.testVar AS testVar
            Left Join: lhs.product = rhs.product
              SubqueryAlias: lhs
                Projection: lhs.product AS product, lhs.label AS label, lhs.p1 AS p1, rhs.p3 AS p3
                  Inner Join: lhs.product = rhs.product
                    SubqueryAlias: lhs
                      Projection: lhs.product AS product, lhs.label AS label, rhs.p1 AS p1
                        Inner Join: lhs.product = rhs.product
                          SubqueryAlias: lhs
                            Projection: lhs.product AS product, lhs.label AS label
                              Inner Join: lhs.product = rhs.product
                                SubqueryAlias: lhs
                                  Projection: lhs.product AS product, lhs.label AS label
                                    Inner Join: lhs.product = rhs.product
                                      SubqueryAlias: lhs
                                        QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?label)
                                      SubqueryAlias: rhs
                                        QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>)
                                SubqueryAlias: rhs
                                  QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>)
                          SubqueryAlias: rhs
                            QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1)
                    SubqueryAlias: rhs
                      QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3> ?p3)
              SubqueryAlias: rhs
                Projection: lhs.product AS product, rhs.testVar AS testVar
                  Inner Join: lhs.product = rhs.product
                    SubqueryAlias: lhs
                      QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>)
                    SubqueryAlias: rhs
                      QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?testVar)
